<resources>
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_title">編集画面</string>
    <string name="date_edit_hint">賞味期限(西暦/月/日)</string>
    <string name="detail_edit_hint">詳細</string>
    <string name="bt_date">カレンダー</string>
    <string name="bt_save">保存</string>
    <string name="bt_delete">削除</string>
    <string name="title_edit_hint">商品名</string>
    <string name="add_text">追加</string>
    <string name="app_name">ショウミー+</string>
    <string name="link_text">この商品を使う料理を見てみる</string>
    <string name="date_sample">2021/12/22</string>
    <string name="title_sample">マヨネーズ</string>
    <string name="expired_text">賞味期限切れ</string>
    <string name="action_settings">アプリ設定</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="fruits_text">フルーツ</string>
    <string name="vegetable_text">野菜</string>
    <string name="drink_text">ドリンク</string>
    <string name="snack_text">おかし</string>
    <string name="niku_text">肉</string>
    <string name="action_customize">カスタマイズ</string>
    <string name="action_friend">フレンド登録</string>
    <string name="action_profile">プロフィール</string>
    <string name="action_end">終了</string>
    <string name="create_category_text">新しいカテゴリーを作成する</string>
    <string name="categoryname_text">カテゴリー名</string>
    <string name="action_sign_in_short">サインイン</string>
    <string name="prompt_username">ユーザーネーム</string>
    <string name="dirt_not_register">アカウントをお持ちでない方</string>
    <string name="action_log_in">ログイン</string>
    <string name="password_text">パスワード</string>
    <string name="password_confirmation_text">パスワード確認</string>
    <string name="register_now_text">今すぐ登録する</string>
    <string name="action_sign_up">サインアップ</string>
    <string name="sign_up_confirm_text">サインアップ確認</string>
    <string name="action_move_on">進む</string>
    <string name="prompt_starlight_anya">スターライトアーニャ</string>
    <string name="user_id_text">あなたのユーザーID</string>
    <string name="user_id">012345</string>
    <string name="information_statement">ユーザーIDは保存しておいてください</string>
    <string name="ok_text">OK</string>
</resources>