<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ProfileActivity"
    tools:context=".activity.ProfileActivity">

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/action_profile"
        android:scaleType="centerInside"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orange_icon"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/backgroundImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/action_profile"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/image_background"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/prompt_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_starlight_anya"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_id_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_id"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/potatoIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/action_profile"
        app:layout_constraintEnd_toStartOf="@+id/pimanIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pimanIcon"
        app:srcCompat="@drawable/potato_icon"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pimanIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/action_profile"
        app:layout_constraintEnd_toStartOf="@+id/orangeIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/potatoIcon"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/piman_icon" />

    <ImageView
        android:id="@+id/orangeIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/action_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pimanIcon"
        app:layout_constraintTop_toTopOf="@+id/pimanIcon"
        app:srcCompat="@drawable/orange_icon"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/edamameIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/fruits_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/potatoIcon"
        app:layout_constraintStart_toStartOf="@+id/potatoIcon"
        app:layout_constraintTop_toBottomOf="@+id/potatoIcon"
        app:srcCompat="@drawable/edamame_icon"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/tomatoIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/action_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pimanIcon"
        app:layout_constraintStart_toStartOf="@+id/pimanIcon"
        app:layout_constraintTop_toBottomOf="@+id/pimanIcon"
        app:srcCompat="@drawable/tomato_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>