<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ExpiryDateManager2"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/fruitsImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/fruits_text"
        app:layout_constraintBottom_toTopOf="@+id/fruitsText"
        app:layout_constraintEnd_toStartOf="@+id/verticalLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalLine1"
        app:srcCompat="@drawable/fruits"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/vegetableImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/vegetable_text"
        app:layout_constraintBottom_toTopOf="@+id/vegetableText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalLine"
        app:layout_constraintTop_toTopOf="@+id/horizontalLine1"
        app:srcCompat="@drawable/yasai"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/drinkImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/drink_text"
        app:layout_constraintBottom_toTopOf="@+id/drinkText"
        app:layout_constraintEnd_toStartOf="@+id/verticalLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalLine2"
        app:srcCompat="@drawable/drink"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/snackImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/snack_text"
        app:layout_constraintBottom_toTopOf="@+id/snackText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalLine"
        app:layout_constraintTop_toTopOf="@+id/horizontalLine2"
        app:srcCompat="@drawable/snack" />

    <ImageView
        android:id="@+id/nikuImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/niku_text"
        app:layout_constraintBottom_toTopOf="@+id/nikuText"
        app:layout_constraintEnd_toStartOf="@+id/verticalLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalLine3"
        app:srcCompat="@drawable/niku"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/fruitsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fruits_text"
        app:layout_constraintBottom_toTopOf="@+id/horizontalLine2"
        app:layout_constraintEnd_toStartOf="@+id/verticalLine"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/vegetableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegetable_text"
        app:layout_constraintBottom_toTopOf="@+id/horizontalLine2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalLine" />

    <TextView
        android:id="@+id/drinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drink_text"
        app:layout_constraintBottom_toTopOf="@+id/horizontalLine3"
        app:layout_constraintEnd_toStartOf="@+id/verticalLine"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/snackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snack_text"
        app:layout_constraintBottom_toTopOf="@+id/horizontalLine3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalLine" />

    <TextView
        android:id="@+id/nikuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niku_text"
        app:layout_constraintBottom_toTopOf="@+id/horizontalLine4"
        app:layout_constraintEnd_toStartOf="@+id/verticalLine"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/addBtn"
        style="@android:style/Widget.ImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/add_text"
        app:layout_constraintBottom_toTopOf="@+id/horizontalLine4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalLine"
        app:layout_constraintTop_toTopOf="@+id/horizontalLine3"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalLine4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>